[project]
name = "python-concurrent-example"
version = "0.1.0"
description = "Just an example showing asyncio and multiprocessing in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "tqdm>=4.67.1",
]
